# GMM_foreground_detection

./: README.md
GMM_foreground_detection/: CMakeLists.txt  GMM.cpp  GMM.h  main.cpp
